--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1698,6 +1698,18 @@ section {
   }
 }
 
+.product-item{
+  /* box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.06); */
+  transition: 0.3s;
+}
+.product-item img{
+  transition: 0.5s;
+}
+.product-item:hover img{
+  transform: scale(1.1);
+}
+
+
 /*--------------------------------------------------------------
 # Recent Blog Posts Section
 --------------------------------------------------------------*/
